# TDEnvSetup

./: .gitignore  Dockerfile.td_base  Dockerfile.td_base_hpc  Dockerfile.td_base_ml  Dockerfile.td_base_ml_R  Dockerfile.td_base_myriadX  README.md  Tools.html  Vagrantfile  _config.yml  apps.md  apt-install.sh  index.html  index.md  install-0-brew.md  install-0-linux.md  install-1-with-spack.md  install-2-python-modules.md  install-with-spack.sh  mac-tools.md  nvidia-for-Ubuntu-16-04.md  nvidia.sh  spack-swift-package.py  tdCondaBase.yaml  tf_test_is_gpu_available.py  tools.py  vars.md  z10pe
dev_info/: index.md
diagnostics_hello_world_mpi_openmp_gpu/: .gitignore  CMakeLists.txt  README.md  main_mpi_openmp_gpu_hello_world.cpp  slurm.4.sh  utils.cu
env-setup/: container-base-ml.md  docker-nvidia.md  install-1-with-spack.md  install-2-python-modules.md  nvidia-for-Ubuntu-16-04.md  swift-for-ubuntu.md
env_setup/: Dockerfile.td_base_hpc  Dockerfile.td_base_ml  Singularity.td_base_ml  install_0_basics_and_brew.md  install_0_brew.md  install_1_with_spack.md  install_2_python_modules.md  install_3_OpenVINO_on_Ubuntu_16_04.md  install_3_nvidia_for_Jetson_L4T_20_04.md  install_3_nvidia_for_Ubuntu_16_04.md  install_3_nvidia_for_Ubuntu_18_04.md  install_3_nvidia_for_Ubuntu_18_10.md  install_3_nvidia_for_Ubuntu_22_04.md  install_4_nvidia_docker2_base_ml_container.md  install_5_singularity.md  install_test_rust_mpi.md  nvidia_docker2_base_ml_container.md  nvidia_for_Ubuntu_16_04.md  singularity_base_ml_container.md  swift_for_ubuntu.md
graphics/: arrows.html  cube.html
tools/: calc-sizes.py
